// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Tile should render Default 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    href="https://example.com"
  >
    <div
      class="css-1dfpi9n"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div
      class="css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        01.01.2023
      </p>
      <h1
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        title
      </h1>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
      >
        von Foobar, Foobar
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithClassName 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways extra-classname css-1bhi0za-MuiTypography-root-MuiLink-root"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    href="https://example.com"
  >
    <div
      class="css-1dfpi9n"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div
      class="css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        01.01.2023
      </p>
      <h1
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        title
      </h1>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
      >
        von Foobar, Foobar
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithEmotion 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    href="https://example.com"
  >
    <div
      class="css-1dfpi9n"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div
      class="css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        01.01.2023
      </p>
      <h1
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        title
      </h1>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
      >
        von Foobar, Foobar
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    href="https://example.com"
  >
    <div
      class="css-1dfpi9n"
    />
    <div
      class="css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        01.01.2023
      </p>
      <h1
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
      >
        title
      </h1>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
      >
        von Foobar, Foobar
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Author Tile should render WithoutTitle 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
    href="https://example.com"
  >
    <div
      class="css-1dfpi9n"
    >
      <img
        alt="DSC07717"
        class="css-1qnf57e"
        height="6000"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
        width="4000"
      />
    </div>
    <div
      class="css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        01.01.2023
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
      >
        von Foobar, Foobar
      </p>
    </div>
  </a>
</DocumentFragment>
`;
